--- a/Views/PetStore/List.cshtml
+++ b/Views/PetStore/List.cshtml
@@ -21,6 +21,6 @@
     }
 
     <div>
-        <a class="btn btn-primary mt-3 float-end" asp-controller="PetShop" asp-action="Add">Create New Pet</a>
+        <a class="btn btn-primary mt-3 float-end" asp-controller="PetStore" asp-action="Add">Create New Pet</a>
     </div>
 </div>
