Added Default Routing from Home to PetStore List

--- a/Views/PetStore/List.cshtml
+++ b/Views/PetStore/List.cshtml
@@ -6,7 +6,7 @@
     @foreach (var pet in Model ?? new List<Pet>())
     {
         <div class="job-summary row">
-            <p class="job-title col-10">@pet.PetSpeciesOrName, @pet.PhotoUrl</p>
+            <p class="job-title col-10">@pet.PetSpecies, @pet.PhotoUrl</p>
             <div class="col-12">   
                 <a class="btn btn-sm btn-secondary mb-3 ml-3 float-end"
                     asp-controller="Job" asp-action="Delete" asp-route-id="@pet.PetId">
