--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,8 +1,31 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
-}
+﻿@model IEnumerable<midterm_project.Models.Pet>
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="list-wrapper">
+    <h1 class="display-4 list-title">Welcome To Our Pet Store!</h1>
+
+    @foreach (var pet in Model ?? new List<Pet>())
+    {
+        <div class="job-summary row">
+            <img src="@pet.PhotoUrl">
+            <p class="job-title col-10">@pet.PetSpecies</p>
+            <div class="col-12">   
+                <a class="btn btn-sm btn-secondary mb-3 ml-3 float-end"
+                    asp-controller="PetStore" asp-action="Detail" asp-route-id="@pet.PetId">
+                    Details
+                </a>
+                <a class="btn btn-sm btn-secondary mb-3 ml-3 float-end"
+                    asp-controller="PetStore" asp-action="Delete" asp-route-id="@pet.PetId">
+                    Delete Pet
+                </a>
+                <a class="btn btn-sm btn-light mb-3 float-end"
+                    asp-controller="PetStore" asp-action="Edit" asp-route-id="@pet.PetId" >
+                    Edit Pet
+                </a>
+            </div>
+        </div>
+    }
+
+    <div>
+        <a class="btn btn-primary mt-3 float-end" asp-controller="PetStore" asp-action="Create">Create New Pet</a>
+    </div>
 </div>
