--- a/Views/PetStore/List.cshtml
+++ b/Views/PetStore/List.cshtml
@@ -18,7 +18,7 @@
                     Delete Pet
                 </a>
                 <a class="btn btn-sm btn-light mb-3 float-end"
-                    asp-controller="PetStore" asp-action="Edit" asp-route-id="@pet.PetId" >
+                    asp-controller="PetStore" asp-action="Update" asp-route-id="@pet.PetId">
                     Edit Pet
                 </a>
             </div>
