--- a/Views/PetStore/List.cshtml
+++ b/Views/PetStore/List.cshtml
@@ -3,27 +3,31 @@
 <div class="list-wrapper">
     <h1 class="display-4 list-title">Welcome To Our Pet Store!</h1>
 
+<div class="container-fluid">
+    <div class="row list">
     @foreach (var pet in Model ?? new List<Pet>())
     {
-        <div class="job-summary row">
-            <img src="@pet.PhotoUrl">
-            <p class="job-title col-10">@pet.PetSpecies</p>
-            <div class="col-12">   
-                <a class="btn btn-sm btn-secondary mb-3 ml-3 float-end"
-                    asp-controller="PetStore" asp-action="Detail" asp-route-id="@pet.PetId">
-                    Details
-                </a>
-                <a class="btn btn-sm btn-secondary mb-3 ml-3 float-end"
-                    asp-controller="PetStore" asp-action="Delete" asp-route-id="@pet.PetId">
-                    Delete Pet
-                </a>
-                <a class="btn btn-sm btn-light mb-3 float-end"
-                    asp-controller="PetStore" asp-action="Update" asp-route-id="@pet.PetId">
-                    Edit Pet
-                </a>
-            </div>
-        </div>
+                <div class="col-4 list-contents">
+                    <p>@pet.PetSpecies</p>
+                    <img src="@pet.PhotoUrl" class="img-thumbnail rounded">
+
+                    <a class="btn btn-sm btn-secondary mb-3 ml-3 float-end" asp-controller="PetStore" asp-action="Detail"
+                        asp-route-id="@pet.PetId">
+                        Details
+                    </a>
+                    <a class="btn btn-sm btn-secondary mb-3 ml-3 float-end" asp-controller="PetStore" asp-action="Delete"
+                        asp-route-id="@pet.PetId">
+                        Delete Pet
+                    </a>
+                    <a class="btn btn-sm btn-light mb-3 float-end" asp-controller="PetStore" asp-action="Update"
+                        asp-route-id="@pet.PetId">
+                        Edit Pet
+                    </a>
+                </div>
+
     }
+    </div>
+</div>
 
     <div>
         <a class="btn btn-primary mt-3 float-end" asp-controller="PetStore" asp-action="Create">Create New Pet</a>
