--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -8,7 +8,11 @@ html {
   }
 }
 
-.btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
+.btn:focus,
+.btn:active:focus,
+.btn-link.nav-link:focus,
+.form-control:focus,
+.form-check-input:focus {
   box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
 }
 
@@ -19,4 +23,19 @@ html {
 
 body {
   margin-bottom: 60px;
+}
+
+.list {
+  display: flex;
+}
+
+.list-contents {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+    margin: auto;
+    cursor: pointer;
+  width: 260px;
+  max-height: 360px;
+  margin-bottom: 50px;
 }
