--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -25,6 +25,12 @@ body {
   margin-bottom: 60px;
 }
 
+/* My Custom Styling */
+
+.list-container{
+  margin-top: -100px;
+}
+
 .list {
   display: flex;
 }
@@ -33,9 +39,23 @@ body {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
-    margin: auto;
-    cursor: pointer;
+  margin: auto;
+  cursor: pointer;
   width: 260px;
-  max-height: 360px;
-  margin-bottom: 50px;
+  height: 360px;
+  margin-top: 120px;
+}
+
+.list-image{
+  margin-bottom: 20px;
+  width: 260px;
+  height: 360px;
+}
+
+footer{
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 30px; 
+  margin-top: 50px;
 }
