--- a/Views/PetStore/List.cshtml
+++ b/Views/PetStore/List.cshtml
@@ -1,18 +1,18 @@
 @model IEnumerable<midterm_project.Models.Pet>
 
-<div class="list-title">
-    <h1 class="display-4 list-title">Welcome To Our Pet Store!</h1>
+<div class="listTitle">
+    <h1 class="display-4 listTitle">Welcome To Our Pet Store!</h1>
         <a class="btn btn-success mt-3 float-end" asp-controller="PetStore" asp-action="Create">Create New Pet</a>
 </div>
 
-<div class="list-container">
+<div class="listContainer">
 <div class="container-fluid">
     <div class="row list">
     @foreach (var pet in Model ?? new List<Pet>())
     {
-                <div class="col-4 list-contents">
+                <div class="col-4 listContents">
                     <h4>@pet.PetSpecies</h4>
-                    <img src="@pet.PhotoUrl" class="img-thumbnail rounded list-image">
+                    <img src="@pet.PhotoUrl" class="img-thumbnail rounded listImage">
 
                     <a class="btn btn-sm btn-secondary mb-3 ml-3 float-end" asp-controller="PetStore" asp-action="Detail"
                         asp-route-id="@pet.PetId">
@@ -22,7 +22,7 @@
                         asp-route-id="@pet.PetId">
                         Delete Pet
                     </a>
-                    <a class="btn btn-sm btn-warning mb-3 float-end" asp-controller="PetStore" asp-action="Update"
+                    <a class="btn btn-sm btn-light mb-3 float-end" asp-controller="PetStore" asp-action="Update"
                         asp-route-id="@pet.PetId">
                         Edit Pet
                     </a>
