--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -25,35 +25,30 @@ body {
   margin-bottom: 60px;
 }
 
+
+
 /* My Custom Styling */
 
-.list-title {
+.listTitle {
   display: inline;
   margin-bottom: 30px;
 }
 
-.list-container {
+.listContainer {
   margin-top: 50px;
-  /* margin-bottom: 60px; */
-  /* margin: auto; */
 }
 
-/* .list {
-  display: flex;
-} */
-
-.list-contents {
+.listContents {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
   margin: auto;
-  cursor: pointer;
   width: 260px;
   height: 360px;
   margin-bottom: 120px;
 }
 
-.list-image {
+.listImage {
   margin-bottom: 20px;
   width: 260px;
   height: 360px;
@@ -65,5 +60,24 @@ footer {
   width: 100%;
   height: 30px;
   margin-top: -200px;
+}
+
+.detailTitle{
+  margin-bottom: -30px;
+}
+
+.detailContainer {
+  display: inline;
+}
+
+.details{
+  display:flex;
+  flex-wrap: wrap;
+  justify-content:center;
+}
+
+.detailImage{
+  width: 300px;
+  height: 460px;
 }
 
