Update VIew CSS

--- a/Views/PetStore/Detail.cshtml
+++ b/Views/PetStore/Detail.cshtml
@@ -10,10 +10,10 @@
 
 <div class="container-fluid detailContainer">
     <div class="row details">
-        <div class="col">
+        <div class="col-4 detailImage">
             <img src="@Model?.PhotoUrl" class="rounded detailImage">
         </div>
-        <div class="col">
+        <div class="col-7">
             <p>@Model?.PetDescription<br>
                 <b>Age:</b> @Model?.PetAge<br>
                 <b>Has the Animal Been Spayed/Neutered?:</b> @Model?.Spayed
