--- a/Views/PetStore/Create.cshtml
+++ b/Views/PetStore/Create.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Create Pet";
 }
 
-<div class="resume-wrapper">
+<div class="create-wrapper">
     <form asp-controller="PetStore" asp-action="Create" method="post">
         <h1 class="display-4 text-center mb-5">Add New Pet</h1>
 
@@ -30,6 +30,14 @@
                 <textarea class="form-control col-md-8" asp-for="PetDescription"></textarea>
                 <div class="col-10 offset-md-1 text-danger text-right">
                     <span asp-validation-for="PetDescription"></span>
+                </div>
+            </div>
+
+            <div class="row mb-4">
+                <label class="control-label col-md-4" asp-for="PetAge"></label>
+                <textarea class="form-control col-md-8" asp-for="PetAge"></textarea>
+                <div class="col-10 offset-md-1 text-danger text-right">
+                    <span asp-validation-for="PetAge"></span>
                 </div>
             </div>
 
