--- a/Views/PetStore/Detail.cshtml
+++ b/Views/PetStore/Detail.cshtml
@@ -16,7 +16,18 @@
         <div class="col-7">
             <p>@Model?.PetDescription<br>
                 <b>Age:</b> @Model?.PetAge<br>
-                <b>Has the Animal Been Spayed/Neutered?:</b> @Model?.Spayed
+                <b>Has the Animal Been Spayed/Neutered?:</b>
+                @{
+                    bool? spayed = ((Model?.Spayed));
+                    if(spayed != true)
+                    {
+                        @ViewData["False"];
+                    }
+                    else
+                    {
+                        @ViewData["True"];
+                    }
+                }
                 <br>
                 <b>Shots & Vaccinations Administered:</b> @Model?.ShotsAndVaccinations
             </p>
@@ -28,8 +39,12 @@
 
 
 <input type="hidden" asp-for="PetId" />
-<div class="submit-wrapper">
+<div class="back-wrapper">
     <a class="btn btn-light" asp-controller="PetStore" asp-action="List">Back</a>
+    <a class="btn btn-sm btn-secondary mb-3 float-end" asp-controller="PetStore" asp-action="Update"
+        asp-route-id="@Model?.PetId">
+        Edit Pet
+    </a>
 </div>
 
 </div>
